--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "nhl-pool-anyserver",
-  "version": "1.1.0",
-  "private": true,
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
