--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nhl-pool-anyserver",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "compression": "^1.7.4"
   },
   "engines": {
     "node": ">=18"
