--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "nhl-pool-anyserver",
-  "version": "1.3.0",
+  "version": "1.1.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "compression": "^1.7.4"
-  },
-  "engines": {
-    "node": ">=18"
+    "express": "^4.19.2"
   }
 }
